--- a/src/components/visualizers/dataStructures/LinkedList/styles.module.css
+++ b/src/components/visualizers/dataStructures/LinkedList/styles.module.css
@@ -86,6 +86,7 @@
   width: 100%;
   height: 100%;
   z-index: 20; /* Higher z-index to ensure buttons are clickable */
+  pointer-events: none; /* Add this line to allow clicks to pass through */
 }
 
 .nodeControls button {
